# SmartVocab

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  DESIGN.md  Dockerfile  Makefile  README.md  commands.bat  commands.py  config.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  start.bat  test.bat  test_enhancements.py  test_navigation.js  wsgi.py  项目描述.md
.github/: PULL_REQUEST_TEMPLATE.md
api/: __init__.py  achievements_api.py  api_launcher.py  api_router_backup.py  auth_api.py  auth_middleware.py  evaluation_api.py  favorites_api.py  health_api.py  learning_api.py  levels_api.py  plans_api.py  recommendation_api.py  swagger_config.py  utils.py  vocabulary_api.py
automation/: README.md  smoke_check.py
core/: __init__.py
data/: cet4_dataset.csv  cet6_dataset.csv  dataset.csv  gre_dataset.csv  toefl_dataset.csv
docs/: database_indexes.sql  frontend_optimization.js  performance_optimization_report.md
frontend/: app.js  index.html  main.js  package.json  styles.css
models/: deep_learning_recommender.pth  deep_learning_recommender_user_6.pth
tests/: conftest.py  test_api_coverage.py  test_auth.py  test_core.py  test_evaluation.py  test_favorites.py  test_forgetting_curve.py  test_frontend.js  test_health.py  test_learning.py  test_recommendation.py
tools/: achievements_crud.py  admin_utils.py  base_crud.py  database.py  evaluation_paper_items_crud.py  evaluation_papers_crud.py  evaluation_results_crud.py  favorites_crud.py  fill_examples.py  learning_records_crud.py  learning_sessions_crud.py  level_gates_crud.py  memory_cache.py  migrate_db.py  mistake_book_crud.py  recommendation_evaluator.py  (+5 more)
(+108 files in other folders)
